2023-11-29T08:13:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7029730019 # 2121
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-29
* notice: last 14d: unq all: 53 89
* notice: prev accum: outdated-unq outdated-all / unq all: 1960 5769 / 2026 5855
* notice: next accum: outdated-unq outdated-all / unq all: 1960 5769 / 2028 5858
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-11-29]

2023-11-29T00:46:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7026456228 # 2120
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-29
* notice: last 14d: unq all: 52 86
* notice: prev accum: outdated-unq outdated-all / unq all: 1947 5749 / 2024 5853
* notice: next accum: outdated-unq outdated-all / unq all: 1960 5769 / 2026 5855
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2023-11-14] / [2023-11-28]

2023-11-28T00:47:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7012595083 # 2117
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-28
* notice: last 14d: unq all: 64 104
* notice: prev accum: outdated-unq outdated-all / unq all: 1936 5736 / 2024 5852
* notice: next accum: outdated-unq outdated-all / unq all: 1947 5749 / 2024 5853
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-11-13] / [2023-11-27]

2023-11-27T16:13:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7007724430 # 2116