@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-11-29T08:13:11Z",
+  "timestamp" : "2023-11-30T00:46:31Z",
   "count_outdated" : 5769,
   "uniques_outdated" : 1960,
-  "count" : 5858,
+  "count" : 5859,
   "uniques" : 2028,
   "clones" : [
     {
@@ -106,9 +106,9 @@
     },
     {
       "timestamp": "2023-11-29T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count": 4,
+      "count_minmax": [ 3, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
