@@ -1,3 +1,12 @@
+2023-11-30T00:46:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7040425907 # 2123
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-30
+* notice: last 14d: unq all: 53 90
+* notice: prev accum: outdated-unq outdated-all / unq all: 1960 5769 / 2028 5858
+* notice: next accum: outdated-unq outdated-all / unq all: 1960 5769 / 2028 5859
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2023-11-29]
+
 2023-11-29T08:13:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7029730019 # 2121
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-29
